<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mkz_sensor_kit_description</name>
  <version>0.1.0</version>
  <description>Sensor kit (Pandar64 + NovAtel IMU/GNSS) for MKZ, Autoware-style.</description>

  <!-- Keep ament_cmake_auto as your build system -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- Xacro is needed at runtime to process .xacro files -->
  <exec_depend>xacro</exec_depend>

  <license>Apache License 2.0</license>
  <maintainer email="you@example.com">Your Name</maintainer>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

